terraform/modules/argocd/files/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: ${argocd_namespace}
spec:
  ingressClassName: traefik
  rules:
  - host: ${argocd_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
